--- a/mandelbrot/mandelbrot.vcxproj
+++ b/mandelbrot/mandelbrot.vcxproj
@@ -152,6 +152,9 @@
   <ItemGroup>
     <ClCompile Include="mandelbrot.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mandelbrot.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
